--- a/pom.xml
+++ b/pom.xml
@@ -66,7 +66,7 @@
                     <artifactId>exec-maven-plugin</artifactId>
                     <version>1.4.0</version>
                     <configuration>
-                        <mainClass>com.test.selenium.Hello</mainClass>
+                        <mainClass>com.test.selenium.src.test.java.com.test.selenium.Hello</mainClass>
                     </configuration>
                 </plugin>
                 <!-- clean lifecycle, see https://maven.apache.org/ref/current/maven-core/lifecycles.html#clean_Lifecycle -->
